--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@ a:link {
 }
 
 body{
-  max-width: 100%;
-  max-height : 4722px;
+  max-width: 93.75vw;
+  max-height : 646.8493150684932vh;
+ 
+  
 }
